--- a/action.yml
+++ b/action.yml
@@ -5,27 +5,20 @@ inputs:
     required: true
     description: "Path to the catalog file."
   repo:
-    # required: true
     description: "GitHub Repository url. E.g. https://github.com/boonya/actions/"
     default: ${{ github.event.repository.html_url }}
   homepage:
     description: "GitHub Pages url. E.g. https://boonya.github.io/actions/"
     default: ${{ github.event.repository.homepage }}
   ref:
-    # required: true
     description: "refs/heads/branch-name, refs/tags/tag or refs/pulls/1/merge"
-    default: ${{ github.ref }} # refs/heads/branch-name or refs/tags/tag-name or refs/pulls/8/merge
+    default: ${{ github.ref }}
   label:
-    # required: true
     description: "A tag or branch name"
     default: ${{ github.head_ref || github.ref_name }}
   sha:
-    # required: true
-    description: "Sha has of label"
-    default: ${{ github.event.after }} # sha hash of head
-outputs:
-  time: # id of output
-    description: "The time we greeted you"
+    description: "Sha of HEAD"
+    default: ${{ github.event.after }}
 runs:
   using: "node16"
-  main: "src/index.mjs"
+  main: "index.mjs"
